# NatTypeProbe

./: .gitignore  CMakeLists.txt
include/: OtherApi.h  StunMessage.h  StunNatDetect.h  StunTypes.h
source/: StunMessage.cpp  StunNatDetect.cpp  main.cpp
